# tax-advisor

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  USER_MANUAL.md  install.sh  prepare_my_tax.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
markdowns/: 1040.md
notebooks/: db.ipynb  ingestion.ipynb  pdf_reader.ipynb
notebooks/chroma_db/: chroma.sqlite3
src/tax_advisor/: __init__.py  __main__.py  agent.py  cli.py  config.py  form1099_extract.py  form_classifier.py  models.py  session.py  templates.py  tools.py  w2_extract.py
src/tax_advisor/data/: __init__.py
src/tax_advisor/data/reference/: p17.md
src/tax_advisor/ingestion/: extract.py  loader.py
src/tax_advisor/privacy/: redactor.py
src/tax_advisor/rag/: chunking.py  embeddings.py  index.py  pipeline.py  retrieve.py
